adapted code to assignment

--- a/Assignment_3/Makefile
+++ b/Assignment_3/Makefile
@@ -1,7 +1,22 @@
-all:
+##
+## %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+## %%  COMMAND LIST FOR THIS MAKEFILE  %%
+## %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+##
+PARAMS = -i -n
+
+all:       ##
+           ## generates the parser
+           ##
 	bison -d parser.y
 	flex scanner.l
 	gcc lex.yy.c parser.tab.c intermediate.c -o cparser -lm
+	
+help:      ##
+           ## how to use this makefile
+           ##
+	@fgrep -h "##" $(MAKEFILE_LIST) | fgrep -v fgrep | sed -e 's/\\$$//' | sed -e 's/##//'
+
 
 parser:
 	bison -d parser.y
@@ -15,19 +30,41 @@ debug:
 	gcc -g lex.yy.c parser.tab.c intermediate.c -o cparser
 
 
-clean:
-	rm -f lex.yy.c parser.tab.c parser.tab.h out.c cparser out *.png *.dot
+clean:     ##
+           ## removes all generated files
+           ##
+	rm -f lex.yy.c parser.tab.c parser.tab.h *_out.c cparser *_out *.png *.dot *.eps
 
 
-run:
-	gcc a3.c -o out
-	./out
-	./cparser a3.c > out.c 2>&1
-	gcc out.c -o out
-	./out
+transform: ##
+           ## type ' make FILE=<filename> transform ' to parse and fully transform 
+           ## the file <filename>.c and to store the result in <filename>_out.c.
+           ## 
+           ## To perform loop interchange only type
+           ## ' make FILE=<filename> PARAMS='-i' transform '.
+           ##
+           ## To perform loop normalization only type
+           ## ' make FILE=<filename> PARAMS='-n' transform '.
+           ##
+	./cparser $(FILE).c $(PARAMS) > $(FILE)_out.c 2>&1
 
-png:
+run:       ##
+           ## type ' make FILE=<filename> run ' to compile both files <filename>.c
+           ## and <filename>_out.c and to execute them for comparison.
+           ##
+	gcc $(FILE).c -o $(FILE)_original_out
+	./$(FILE)_original_out
+	gcc $(FILE)_out.c -o $(FILE)_out
+	./$(FILE)_out
+	
+png:       ##
+           ## generates the dot- and .png file for the abstract syntax tree of
+           ## the most recently transformed input file.
+           ##
 	dot -Tpng  test_function.dot -o test_function.png
 
-eps:
+eps:       ##
+           ## generates the dot- and .eps file for the abstract syntax tree of 
+           ## the most recently transformed input file.
+           ##
 	dot -Teps  test_function.dot -o test_function.eps
